Outline knob no longer overlaps track

--- a/styles/articleMenu/_outline.scss
+++ b/styles/articleMenu/_outline.scss
@@ -63,7 +63,7 @@
         #outline-scrollable-knob {
             width: 2px;
             position: absolute;
-            left: 0;
+            left: 1px;
             top: 0;
             height: 1px;
             z-index: 1;
